RESOLVED FIXED313348
Fix FileSystemDirectoryHandle's resolve()
https://bugs.webkit.org/show_bug.cgi?id=313348
Summary Fix FileSystemDirectoryHandle's resolve()
Anne van Kesteren
Reported 2026-04-26 07:34:17 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-04-26 07:43:17 PDT
EWS
Comment 2 2026-04-26 20:05:46 PDT
Committed 312061@main (0f86f542d97c): <https://commits.webkit.org/312061@main> Reviewed commits have been landed. Closing PR #63631 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-26 20:06:13 PDT
Note You need to log in before you can comment on or make changes to this bug.