Fix FileSystemDirectoryHandle's resolve() https://bugs.webkit.org/show_bug.cgi?id=313348

Reviewed by Chris Dumez.

resolve() needs to return null when its argument is not a descendant of
this. When fixing this I noticed there was also a bug with sibling
directories. An additional WPT test is added for that and upstreamed
here:

    https://github.com/web-platform-tests/wpt/pull/59479

Canonical link: https://commits.webkit.org/312061@main